--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugrid"]
 	path = themes/hugrid
-	url = https://github.com/aerohub/hugrid
+	url = https://github.com/thomasphillips3/hugrid
