--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,7 +13,7 @@ collections:
     tags: [""]
     folder: "data/days"
     create: true
-    slug: "Day_{{day}}-{{slug}}"
+    slug: "Day_{{day}}-{{slug}}.toml"
     fields:
       - { label: "Day", name: "day", widget: "number" }
       - { label: "Title", name: "title", widget: "string" }
