Revert "Add `.toml` to the slug."
This reverts commit 3fbc6ff1cd7a8fa2386d7d777001d0af653b082d.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,7 +13,7 @@ collections:
     tags: [""]
     folder: "data/days"
     create: true
-    slug: "Day_{{day}}-{{slug}}.toml"
+    slug: "Day_{{day}}-{{slug}}"
     fields:
       - { label: "Day", name: "day", widget: "number" }
       - { label: "Title", name: "title", widget: "string" }
