--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,9 +1,8 @@
 backend:
   name: git-gateway
-  # name: test-repo
   branch: master
 
-# publish_mode: editorial_workflow
+publish_mode: editorial_workflow
 media_folder: "static/img"
 public_folder: "/img"
 
