Fix file naming

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,7 @@ collections:
     tags: [""]
     folder: "data/days"
     create: true
-    slug: "Day_{{day}}-{{slug}}"
+    slug: "{{slug}}"
     extension: "toml"
     fields:
       - { label: "Day", name: "day", widget: "number" }
